style.css
/* ... */
.blocklyTreeLabel {
  font-weight: normal !important;
  font-family: "Asap", Helvetica, Arial, Lucida, sans-serif !important;
  color: black !important;
  background-color: inherit;
  font-size: 14px;
  text-align: center;
  margin-top: 5px;
}

.blocklyDropDownArrow {
  cursor: pointer;
}

.blocklyToolboxDiv {
  padding-top: 0;
}

.blocklyTreeRow {
  border-left: none !important; /* Remove colored tab */
}

/* Search Highlight Styles */
.blockly-ws-search {
  background: white;
  margin-top: 5px;
  border: solid #ee5d6c 4px;
  box-shadow: 0px 10px 20px grey;
  justify-content: center;
  padding: 0.25em;
  position: absolute;
  z-index: 70;
}

path.blocklyPath.blockly-ws-search-highlight {
  fill: #ed808b;
}

path.blocklyPath.blockly-ws-search-highlight.blockly-ws-search-current {
  fill: #ee5d6c;
}

/* Canvas Styles */
#renderCanvas {
  width: 100%;
  height: auto;
  touch-action: none;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
}

/* Layout Styles */
#maincontent {
  width: 100vw;
  height: calc(100vh - 40px);
  display: flex;
  margin: 0;
  gap: 0;
}

#blocklyDiv {
  height: 100%;
  width: 100%;
  border: none;
}

#menu {
  display: flex;
  height: 40px;
  align-items: center;
  justify-content: space-between;
  max-width: 100vw;
  gap: 5px;
  z-index: 10;
  background-color: rgba(255, 255, 255, 0.9);
  padding: 0;
  border-radius: 5px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
}

#menuleft,
#menumiddle,
#menuright {
  display: flex;
  align-items: center;
}

#codePanelButtons {
  display: flex;
  height: 40px;
  justify-content: space-between;
  flex-shrink: 0;
  border: none;
}

/* Buttons */
.bigbutton {
  display: inline-block;
  margin: 0;
  padding: 5px;
  font-size: 18px;
  background-color: #f0f0f0;
  color: black;
  border: none;
  border-radius: 15px;
  cursor: pointer;
  touch-action: manipulation;
}

.bigbutton:hover {
  background-color: #e0e0e0;
}

/* Gizmo Buttons */
.gizmo-buttons {
  display: flex;
  flex-wrap: wrap;
  gap: 5px;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.gizmo-button {
  padding: 5px;
  font-size: 12px;
  cursor: pointer;
  border-radius: 5px;
  border: none;
  background-color: #004d4d;
 /*background-color: #317873;*/
  /*background-color: #511D91;*/
  color: white;
}

/* Dropdown Styles */
.dropdown {
  position: relative;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  max-width: 200px;
  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
  z-index: 1;
  border-radius: 5px;
  white-space: nowrap;
  right: 0;
  left: auto;
}

.dropdown:hover .dropdown-content {
  display: block;
}

.dropdown-content button {
  font-size: 1em;
}

/* Shape Menu */
#shape-menu {
  position: relative;
  display: inline-block;
}

#shapes-dropdown {
  position: absolute;
  bottom: -50px;
  left: 0;
  display: block;
  background-color: rgba(1, 1, 1, 0.5);
  padding: 10px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  width: 320px;
  overflow: hidden;
}

#shapes-dropdown ul {
  display: flex;
  padding: 0;
  margin: 2px;
  list-style: none;
  gap: 4px;
  overflow-x: auto;
  scroll-behavior: smooth;
  white-space: nowrap;
  scrollbar-width: none;
}

#shapes-dropdown ul::-webkit-scrollbar {
  display: none;
}

#shapes-dropdown ul li {
  background-color: rgba(255, 255, 255, 0.5);
  border-radius: 5px;
  padding: 5px;
  display: inline-block;
  cursor: pointer;
}

#shapes-dropdown ul li img {
  width: 50px;
  height: 50px;
}

#shapes-dropdown ul li:hover {
  background-color: rgba(255, 255, 255, 0.7);
}

#shapes-dropdown ul li:hover img {
  transform: scale(1.2);
}

/* Scrollable Container with Arrows */
.scrollable-container {
  position: relative;
  display: flex;
  align-items: center;
  width: 100%;
}

#model-row {
  overflow-x: hidden;
  white-space: nowrap;
  flex-grow: 1;
  display: flex;
  gap: 10px;
}

.scroll-button {
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
  cursor: pointer;
  font-size: 18px;
  padding: 5px 10px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  z-index: 2;
  width: 30px;
  height: 30px;
}

.scroll-button.left {
  left: -15px;
}

.scroll-button.right {
  right: -15px;
}

/* Responsive Styles */
@media (max-width: 768px) {
  :root {
	--dynamic-offset: 65px;
  }

  .blocklyTreeRowContentContainer {
	flex-direction: column !important;
	background-color: var(--category-color) !important;
	color: white;
	font-size: 10px;
	display: flex !important;
	align-items: center !important;
	justify-content: center !important;
  }

  .blocklyTreeRow {
	flex-direction: column;
	height: unset;
	line-height: unset;
	margin-bottom: 3px;
	margin-top: 0;
	padding: 3px;
	padding-top: 0px;
	white-space: nowrap;
  }

  .blocklyTreeRowContentContainer {
    padding-top: 20px; /* Reserve space for the search box */
  }

  #maincontent {
	width: 200vw;
	height: calc(100vh - var(--dynamic-offset));
	overflow-x: auto;
  }

  #scene-explorer-host,
  #inspector-host,
  #toggleDesign {
	display: none !important;
  }

  #codePanel,
  #rightArea {
	flex-basis: 100vw;
	max-width: 100vw;
	height: calc(100vh - var(--dynamic-offset));
	flex-grow: 1;
  }

  #bottomBar {
	position: fixed;
	bottom: 0;
	left: 0;
	width: 100vw;
	height: 25px;
	background-color: #511D91;
	color: white;
	text-align: center;
	line-height: 16px;
	display: flex;
	justify-content: center;
	align-items: center;
	box-sizing: border-box;
	padding: 0 2px;
  }

  #switchViews {
	background-color: transparent;
	border: none;
	color: white;
	padding: 5px 10px;
	margin: 0;
	font-size: 16px;
	cursor: pointer;
	border-radius: 5px;
  }
}
/* ... */

